[package]
name = "quincho"
version = "0.0.2"
authors = ["Matthias Debernardini <m.f.debern@protonmail.com>"]
description = "verify message signatures using bitcoin"
license = "MIT"
edition = "2021"
repository = "https://github.com/matthiasdebernardini/quincho"

[dependencies]
thiserror = "1.0.38"
base64-compat = "1.0.0"
hex = "0.4.3"
bitcoin = "0.29.2"
secp256k1 = { version = "0.26.0", features = [ "recovery" ] }